# thrift_test

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
libthrift/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
thrifts/: CMakeLists.txt  thrifts.thrift
